[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
indicatif = "0.17.11"
lazy_static = "1.5.0"
rand = "*"
rayon = "1.10.0"
serde_json = "1.0.138"
serde = {version = "1.0", features = ["derive"]}
